workspace-sf/force-app/main/default/objects/FormaPagamento__c/FormaPagamento__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar o cadastro das formas de pagamento</description>
    <label>Forma de pagamento</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formas de pagamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>