workspace-sf/force-app/main/default/objects/FormaPagamento__c/fields/IdModalidade__c.field-meta.xml
<CustomField>
    <fullName>IdModalidade__c</fullName>
    <formula>CASESAFEID( Modalidade__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Modalidade</label>
    <type>Text</type>
</CustomField>