workspace-sf/force-app/main/default/objects/FormaPagamento__c/fields/IdRamoSeguro__c.field-meta.xml
<CustomField>
    <fullName>IdRamoSeguro__c</fullName>
    <formula>CASESAFEID( RamoSeguro__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Ramo de seguro</label>
    <type>Text</type>
</CustomField>