workspace-sf/force-app/main/default/objects/FormaPagamento__c/fields/Modalidade__c.field-meta.xml
<CustomField>
    <fullName>Modalidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modalidade</label>
    <referenceTo>Modalidade__c</referenceTo>
    <relationshipLabel>Formas de pagamento</relationshipLabel>
    <relationshipName>Formas_de_pagamento</relationshipName>
    <type>Lookup</type>
</CustomField>