workspace-sf/force-app/main/default/objects/FormaPagamento__c/fields/testelookup__c.field-meta.xml
<CustomField>
    <fullName>testelookup__c</fullName>
    <formula>Codigo__c  + &apos; - &apos;+Modalidade__r.Name+ &apos; - &apos;+ RamoSeguro__r.Name</formula>
    <label>testelookup</label>
    <type>Text</type>
</CustomField>