workspace-sf/force-app/main/default/objects/FormaPagamento__c/validationRules/BloqueiaEdicaoNome.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaEdicaoNome</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK(PRIORVALUE(Name)) || ISNULL(PRIORVALUE(Name)), false, IF(ISCHANGED(Name),true,false))</errorConditionFormula>
    <errorMessage>Não é possível atualizar o nome da forma de pagamento</errorMessage>
</ValidationRule>