workspace-sf/force-app/main/default/objects/FormaPagamento__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>RamoSeguro__c</columns>
    <columns>Modalidade__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as formas de pagamento</label>
</ListView>